# ifsbench

./: .gitattributes  .gitignore  .pylintrc  CMakeLists.txt  CONTRIBUTORS.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: docs.yaml  pytest.yaml  sync.yaml
cmake/: python_venv.cmake
docs/: Makefile
docs/source/: conf.py  ifsbench_api.rst  index.md
ifsbench/: __init__.py  _version.py  application.py  arch.py  benchmark.py  cli.py  config_mixin.py  config_utils.py  darshanreport.py  data_file_reader.py  data_file_stats.py  drhook.py  env.py  environment.py  files.py  gribfile.py  ifs.py  job.py  launcher.py  logging.py  namelist.py  netcdf_file_reader.py  nodefile.py  paths.py  pydantic_utils.py  runrecord.py  serialisation_mixin.py  util.py
ifsbench/cli/: __init__.py  cli.py  nml_diff.py  pack.py
ifsbench/command_line/: __init__.py  cli.py  nml_diff.py  pack.py
ifsbench/command_line/tests/: test_cli.py
ifsbench/data/: __init__.py  datahandler.py  datahandler_utils.py  extracthandler.py  fetchhandler.py  namelisthandler.py  renamehandler.py
ifsbench/data/tests/: test_datahandler_utils.py  test_extracthandler.py  test_fetchhandler.py  test_namelisthandler.py  test_renamehandler.py
ifsbench/launch/: __init__.py  launcher.py  launcher_utils.py  mpirunlauncher.py  srunlauncher.py
ifsbench/launch/tests/: test_launcher_utils.py  test_mpirunlauncher.py  test_srunlauncher.py
ifsbench/launcher/: __init__.py  launcher.py  mpirunlauncher.py  srunlauncher.py
ifsbench/results/: __init__.py  ensemble_stats.py
ifsbench/results/tests/: __init__.py  test_ensemble_stats.py
ifsbench/tests/: test_application.py  test_arch.py  test_benchmark.py  test_config_utils.py  test_data_file_stats.py  test_envhandler.py  test_files.py  test_gribfile.py  test_ifs.py  test_job.py  test_namelist.py  test_netcdf_file_reader.py  test_pydantic_dataframe.py  test_serialisation_mixin.py  test_util.py
ifsbench/tests/gribfiles/: model_input_data_fractionparam.grb  model_input_data_fractionparam.grb.47d85.idx  model_input_data_fractionparam.grb.5b7b6.idx  model_output_data_pl.grb2
ifsbench/tests/namelists/: array_1.nml  array_2.nml  t21_fc.nml
ifsbench/tests/netcdf_files/: o_fix.nc  o_gg.nc
ifsbench/tests/nodefiles/: nodefile_default
ifsbench/validation/: __init__.py  frame_close_validation.py  frame_util.py
ifsbench/validation/tests/: test_frame_close_validation.py  test_frame_util.py
scripts/: __init__.py  ifs-bench.py  nml-diff.py
tests/: conftest.py  t21_fc.nml  test_arch.py  test_benchmark.py  test_cli.py  test_config_mixin.py  test_config_utils.py  test_darshanreport.py  test_files.py  test_gribfile.py  test_ifs.py  test_job.py  test_launcher.py  test_namelist.py  test_nodelist.py  test_util.py
tests/data/: test_extracthandler.py  test_namelisthandler.py  test_renamehandler.py
tests/gribfiles/: model_input_data_stl.grb  model_output_data_rad.grb2  model_output_data_spectral.grb2
tests/launcher/: test_launchdata.py  test_mpirunlauncher.py
tests/namelists/: template.nml
tests/nodefiles/: nodefile_default  nodefile_pred_corr
tests/results/: test_ensemble_stats.py
