[metadata]
name = ifsbench
version = attr: ifsbench.__version__
description = IFS benchmark and testing utilities in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = ECMWF
author_email = user_support_section@ecmwf.int

[options]
packages = find:
install_requires = 
    # For the library itself
    pandas
    f90nml
    pyyaml
    # For scripts
    click
scripts =
    scripts/ifs-bench.py
    scripts/nml-diff.py

[options.extras_require]
tests =
    pytest
    pytest-cov
    coverage2clover
    pylint
    pytest-pylint

[options.packages.find]
exclude =
    tests

[versioneer]
VCS = git
style = git-describe
versionfile_source = ifsbench/_version.py
versionfile_build = ifsbench/_version.py
tag_prefix =

[flake8]
max-line-length = 120
ignore = F403,E226,E731,W605
