[metadata]
name = ifsbench
version = attr: ifsbench.__version__
description = IFS benchmark and testing utilities in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = ECMWF
author_email = user_support_section@ecmwf.int

[options]
python_requires = >=3.8.0
packages = find:
install_requires =
    # For the library itself
    pandas
    f90nml>=1.4.0
    pyyaml
    # For scripts
    click
scripts =
    scripts/ifs-bench.py
    scripts/nml-diff.py

[options.extras_require]
tests =
    pytest
    pytest-cov
    coverage2clover
    pylint
    pytest-pylint

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
ignore = F403,E226,E731,W605
